Fixed many issues with types and improved documentation

--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
   "private": false,
   "scripts": {
     "build": "tsc && yarn run copyfiles -u1 src/*.d.ts dist/types",
-    "prepublishOnly": "yarn run test",
-    "pretest": "yarn run build",
-    "test": "node --no-warnings --experimental-vm-modules node_modules/.bin/jest"
+    "prepublishOnly": "yarn run build && yarn run test && yarn run test-types",
+    "test": "node --no-warnings --experimental-vm-modules node_modules/.bin/jest",
+    "test-types": "tsd"
   },
+  "files": [
+    "./src/",
+    "./dist/"
+  ],
   "jest": {
     "transform": {}
   },
+  "tsd": {
+		"directory": "test"
+	},
   "exports": {
     ".": "./dist/index.js",
     "./*": "./dist/modules/*.js"
@@ -31,6 +38,7 @@
     "@types/jest": "^27.0.2",
     "copyfiles": "^2.4.1",
     "jest": "^27.0.6",
+    "tsd": "^0.18.0",
     "typescript": "^4.4.4"
   }
 }
